@@ -16,6 +16,8 @@
      Allow setting of port for regress from TEST_SSH_PORT variable; ok markus@
  - (dtucker) [cipher.c] encrypt->do_encrypt inside SSH_OLD_EVP to match
    -Wshadow change.
+ - (dtucker) [auth.c openbsd-compat/port-aix.c openbsd-compat/port-aix.h]
+   Move loginrestrictions test to port-aix.c, replace with a generic hook.
 
 20040622
  - (bal) [auth-passwd.c auth1.c] Clean up unused variables.
